--- a/nuclear/index.html
+++ b/nuclear/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <header>
         <span class="company-name">Panto</span>
         <nav class="navlist">
@@ -24,8 +25,8 @@
             <img src="./icon/number.svg" alt="number of product" id="bag-number">
         </div>
     </header>
-    <main>
 
+    <main>
         <!-- 1 container -->
         <section class="hero-container">
             <div class="hero-container-wrapper">
@@ -188,7 +189,130 @@
                 </div>
             </div>
         </section>
+
+        <!-- 5 container -->
+        <section class="fiveth-container">
+            <div class="fiveth-container-wrapper">
+                <div class="fiveth-container-content">
+                    <h5>Materials</h5>
+                    <h3>Very serious materials for making furniture</h3>
+                    <p>Because panto was very serious about designing furniture for our environment, using a very
+                        expensive and famous capital but at a relatively low price</p>
+                    <div class="more-info">
+                        <h6>More Info</h6>
+                        <img src="./icon/right-arrow.svg" alt="">
+                    </div>
+                </div>
+                <div class="fiveth-conatiner-grid">
+                    <img src="./media/second-forniture.svg" alt="" class="item3">
+                    <img src="./media/third-forniture.svg" alt="" class="item2">
+                    <img src="./media/first-forniture.svg" alt="" class="item1">
+                </div>
+            </div>
+        </section>
+
+        <!-- 6 container -->
+        <section class="sixth-container">
+            <div class="sixth-container-wrapper">
+                <div class="sixth-container-header">
+                    <h4>Testimonials</h4>
+                    <h3>Our Client Reviews</h3>
+                </div>
+                <div class="sixth-container-content">
+                    <div class="sixth-container-content-box">
+                        <img src="./media/unsplash__HqHX3LBN18.svg" alt="">
+                        <div class="sixth-container-content-box-rec">
+                            <img src="./media/client-1.svg" alt="">
+                            <h4>Bang Upin</h4>
+                            <h5>Pedagang Asongan</h5>
+                            <p>“Terimakasih banyak, kini ruanganku menjadi lebih mewah dan terlihat mahal“</p>
+                            <div class="sixth-container-box-star">
+                                <div class="star"></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sixth-container-content-box">
+                        <img src="./media/unsplash_h2_3dL9yLpU.svg" alt="">
+                        <div class="sixth-container-content-box-rec">
+                            <img src="./media/client-1.svg" alt="">
+                            <h4>Ibuk Sukijan</h4>
+                            <h5>Ibu Rumah Tangga</h5>
+                            <p>“Makasih Panto, aku sekarang berasa tinggal di apartment karena barang-barang yang
+                                terlihat
+                                mewah“</p>
+                            <div class="sixth-container-box-star">
+                                <div class="star"></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sixth-container-content-box">
+                        <img src="./media/unsplash_JaXs8Tk5Iww.svg" alt="">
+                        <div class="sixth-container-content-box-rec">
+                            <img src="./media/client-3.svg" alt="">
+                            <h4>Mpok Ina</h4>
+                            <h5>Karyawan Swasta</h5>
+                            <p>“Sangat terjangkau untuk kantong saya yang tidak terlalu banyak“</p>
+                            <div class="sixth-container-box-star">
+                                <div class="star"></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <!-- footer 1 container -->
+        <section class="footer-first-container">
+            <div class="footer-description">
+                <h5>Panto</h5>
+                <p>The advantage of hiring a workspace with <br>us is that givees you comfortable <br>service and
+                    all-around
+                    facilities.</p>
+            </div>
+            <ul class="service-list">
+                <li class="list-footer-header">Services</li>
+                <li>Email Marketing</li>
+                <li>Camplaigns</li>
+                <li>Branding</li>
+            </ul>
+            <ul class="furniture-list">
+                <li class="list-footer-header">Furniture</li>
+                <li>Beds</li>
+                <li>Chair</li>
+                <li>All</li>
+            </ul>
+            <ul class="social-list">
+                <li class="list-footer-header">Follow Us</li>
+                <li><a href=""><img src="./icon/facebook.svg" alt="">Facebook</a></li>
+                <li><a href=""><img src="./icon/twitter.svg" alt="">Twitter</a></li>
+                <li><a href=""><img src="./icon/instagram.svg" alt="">Instagram</a></li>
+            </ul>
+        </section>
+
+        <!-- footer 2 container -->
+        <section class="footer-second-container">
+            <h6>Copyright © 2021</h6>
+            <div class="footer-second-container-terms">
+                <h6>Terms & Conditions</h6>
+                <h6>Privacy Policy</h6>
+            </div>
+        </section>
+    </footer>
+
 </body>
 
 </html>
